# mini-vectordb

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  benchmark.py
src/mini_vectordb/: filters.py  persistence.py  similarity.py  store.py
tests/: test_filters.py  test_persistence.py  test_similarity.py  test_store.py
