[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-vectordb"
version = "0.1.0"
description = "A vector database built from scratch to understand how systems like ChromaDB work internally."
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]